@@ -21,6 +21,7 @@
 *
 
 - New hook scripts: PostObjectCreate and DiscoveryPoll
+- Implemented watchdog functionality for external subagents
 
 
 *
